--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>this is my first git commit</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe beatae, aliquid, temporibus mollitia molestiae dolor voluptatum quibusdam reiciendis necessitatibus, nulla rerum sunt inventore ex deserunt dolore quae ea consequatur placeat!</p>
     <h2>I want to master git</h2>
+    <p>I will not give up on git</p>
 </body>
 </html>
